--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,3 @@
-/* :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-} */
-
-body {
-  /* margin: 0 auto; */
-  /* margin-left: 500px; */
-  /* display: flex; */
-  /* place-items: center; */
-}
-
 ul {
   list-style: none;
   padding: 0;
@@ -28,4 +6,21 @@ ul {
 
 p {
   margin: 0;
+}
+
+table {
+  border-collapse: collapse;
+  width: 600px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+table td,
+table th {
+  border: 1px solid black;
+  padding: 10px;
+}
+
+table th {
+  background-color: #f2f2f2;
 }
